# SerialCPP

./: CMakeLists.txt  README.md
examples/: BasicExample.cpp  BinaryExample.cpp  CMakeLists.txt  ReconnectionExample.cpp
include/SerialCPP/: SerialCPP.h
src/: SerialCPP.cpp
